# arid

./: Cargo.toml  README.md
benches/: basic.rs
crates/arid/: Cargo.toml  LICENSE  README.md  README.template.hbs
crates/arid-entity/: Cargo.toml  README.md
crates/arid-entity/examples/: hierarchy.rs  simple.rs
crates/arid-entity/src/: archetype.rs  entity.rs  lib.rs  tests.rs  utils.rs  world.rs
crates/arid/benches/: basic.rs
crates/arid/examples/: counter.rs  lifecycle.rs
crates/arid/src/: arena.rs  entity.rs  handle.rs  keep_alive.rs  lib.rs  world.rs  wrappers.rs
crates/late-struct/: Cargo.toml
crates/late-struct/src/: descriptor.rs  init.rs  instance.rs  lib.rs  std_ops.rs  traits.rs
examples/: counter.rs
src/: archetype.rs  arena.rs  entity.rs  erased.rs  handle.rs  late_struct.rs  lib.rs  query.rs  world.rs  wrappers.rs
src/utils/: butterfly.rs  keep_alive.rs  mod.rs
