[package]
name = "boao"
version = "0.1.0"
edition = "2024"

[dependencies]
bumpalo = "3.19.0"
derive-where = "1.5.0"
late-struct = "0.1.0"
paste = "1.0.15"
rustc-hash = "2.1.1"
scopeguard = "1.2.0"
thin-vec = "0.2.14"

[dependencies.bytemuck]
version = "1.23.1"
default-features = false
features = ["derive"]
