[package]
name = "boao"
version = "0.1.0"
edition = "2024"

[dependencies]
bumpalo = "3.19.0"
bytemuck = "1.23.1"
derive-where = "1.5.0"
late-struct = "0.1.0"
paste = "1.0.15"
rustc-hash = "2.1.1"
scopeguard = "1.2.0"
thiserror = "2.0.12"

[dev-dependencies]
criterion = "0.6.0"

[[bench]]
name = "basic"
harness = false
